# road_backend

./: .dockerignore  .pylintrc  Dockerfile  LICENSE  Procfile  asgi.py  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  urls.py  wsgi.py
.github/database/: Dockerfile
.github/workflows/: pylint.yml  python-checks.yml  rust-checks.yml  static-checks.yml  test.yml
nginx/: Dockerfile  nginx.conf
road/: access_policies.py  admin.py  apps.py  asgi.py  exceptions.py  global_access_conditions.py  models.py  permissions.py  rdkit_wrapper.py  serializers.py  services.py  tests.py  urls.py  views.py  wsgi.py
road/migrations/: 0001_initial.py  0002_alter_molecule_molecule.py  0003_alter_molecule_molecule.py
road/query_parser/: Cargo.toml  pyproject.toml
road/query_parser/src/: builder.rs  lib.rs  types.rs
road/settings/: base.py  development.py  production.py
road_app/: apps.py
settings/: base.py  development.py  production.py  test.py
stubs/: query_parser.pyi
stubs/django_rdkit/models/: __init__.pyi
stubs/rdkit/Chem/: __init__.pyi  rdMolDescriptors.pyi
stubs/rdkit/Chem/Draw/: rdMolDraw2D.pyi
stubs/reversion/: admin.pyi
