[package]
name = "query_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "query_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
periodic-table-on-an-enum = "0.3.2"